# rust-auth-service

./: Cargo.toml  README.md
docs/: GITHUB_PAGES.md  SPECIFICATION.md  TZ_GAP_ANALYSIS.md
migrations/: 202602200001_init.sql  202602200002_expand_schema_to_spec.sql  202602200003_gap_alignment.sql
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs
src/domain/: mod.rs
src/security/: mod.rs
tests/: auth_integration.rs
